# pokeshop

./: Dockerfile  README.md  compose.yaml  dependencies.py  main.py  pyproject.toml
application/interface/api/routes/: catalog_routes.py
application/use_cases/: get_card.py  list_available_cards.py  reference_card.py  search_card.py  withdrawl_card.py
catalog/: models.py  routes.py
domain/entities/: card.py  test_card.py
domain/event/: card.py  event_publisher.py
domain/exceptions/: exceptions.py
domain/ports/: card_repository.py
domain/repositories/: card_repository.py
domain/services/: card.py
infra/events/: event_publisher.py
infra/repositories/: card_repository.py
interface/api/routes/: catalog_routes.py
interface/api/schemas/: card_schemas.py
tests/: conftest.py  factories.py  fakes.py
tests/application/: test_available_cards.py  test_get_card.py  test_reference_card.py  test_search_card.py  test_withdrawl_card.py
tests/domain/: test_card.py
use_cases/: get_card.py  list_available_cards.py  reference_card.py  search_card.py  withdrawl_card.py
